[gd_scene load_steps=8 format=3 uid="uid://2cyn61pad45a"]

[ext_resource type="Script" uid="uid://mrlr4oh03qqh" path="res://units/tank_template/tank_template.gd" id="1_ffl12"]
[ext_resource type="Shader" uid="uid://i1klvks6pis1" path="res://units/tank_template/tank_template.gdshader" id="2_7wtuo"]
[ext_resource type="Texture2D" uid="uid://c6n0wot20j1gx" path="res://Assets/main_spritesheet.png" id="3_tpquc"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_7je5b"]
shader = ExtResource("2_7wtuo")
shader_parameter/line_color = Color(1, 1, 1, 1)
shader_parameter/line_thickness = 0.4

[sub_resource type="CircleShape2D" id="CircleShape2D_ffl12"]

[sub_resource type="CircleShape2D" id="CircleShape2D_7wtuo"]

[sub_resource type="CircleShape2D" id="CircleShape2D_hfxdf"]
radius = 162.89

[node name="tank_template" type="CharacterBody2D"]
script = ExtResource("1_ffl12")

[node name="Body_selected" type="Sprite2D" parent="."]
visible = false
texture_filter = 1
material = SubResource("ShaderMaterial_7je5b")
position = Vector2(0, -4)
scale = Vector2(1.6, 1.6)
texture = ExtResource("3_tpquc")
hframes = 9
vframes = 7

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_ffl12")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_7wtuo")

[node name="Body_unselected" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(0, -4)
scale = Vector2(1.6, 1.6)
texture = ExtResource("3_tpquc")
hframes = 9
vframes = 7

[node name="Turret" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(-9.53674e-07, -3)
scale = Vector2(1.6, 1.6)
texture = ExtResource("3_tpquc")
hframes = 9
vframes = 7
frame = 2

[node name="Vision" type="Area2D" parent="."]
collision_layer = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Vision"]
shape = SubResource("CircleShape2D_hfxdf")

[node name="Reload" type="Timer" parent="."]
wait_time = 2.0

[connection signal="area_entered" from="Vision" to="." method="_on_vision_area_entered"]
[connection signal="area_exited" from="Vision" to="." method="_on_vision_area_exited"]
[connection signal="timeout" from="Reload" to="." method="_on_reload_timeout"]
